# opencode-dobby-hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
jni/: Android.mk  Application.mk  hook.cpp
patches/: 001-fix-dobby-compile.patch  apply_patches.sh
